--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "new": "cpp",
-        "atomic": "cpp"
+        "atomic": "cpp",
+        "ostream": "cpp"
     }
 }
